# Logalizer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  a.out  logalizer.py  vcpkg.json
.github/workflows/: cmake.yml  cpp.yml
cmake/: FindSphinx.cmake
demo/csv/: sample_config.json  sample_translation.csv
demo/csv/generated_sample/: sample.log.txt
demo/json/: sample_config.json
demo/json/generated_sample/: sample.log.original  sample.log.txt
docs/: CMakeLists.txt  Doxyfile.in  How-To-Configure.md  conf.py  index.rst  sample_config.json
docs/doxygen/: Doxyfile.in
lib/config/: CMakeLists.txt  config_types.h  configparser.cpp  configparser.h  jsonconfigparser.cpp  jsonconfigparser.h  path_variable_utils.cpp  path_variable_utils.h
src/: CMakeLists.txt  LogalizerConfig.h.in  main.cpp  translator.cpp  translator.h  translator.hpp
static_analysis/clang_scan_build/: CMakeLists.txt  run_test.sh
static_analysis/cppcheck/: CMakeLists.txt
tests/: CMakeLists.txt  configparser_mock.h  jsonconfigparser.cpp  path_variable_utils.cpp  runlistener.cpp  translator.cpp
uiapp/: CMakeLists.txt  MainFrameImpl.cpp  MainFrameImpl.h  main.cpp
uiapp/platform/: application.cpp  application.h
uiapp/ui/: Generate.fbp  ui.cpp  ui.h
